# tres-card-game

./: README.md  pyproject.toml
tests/: test_tres_card_game.py
tres_card_game/: PyQt6widget.py
